Fix breadcrumb spacing

--- a/Frontend/src/scss/_blogpost-page.scss
+++ b/Frontend/src/scss/_blogpost-page.scss
@@ -6,10 +6,11 @@
       padding-bottom: 40px;
       border-bottom: 1px solid #ddd;
     }
+
   }
 
   .blogpost__breadcrumb {
-    margin-bottom: -1%!important;
+    margin-bottom: 1%;
   }
 
   .blogpost__breadcrumb a{
